<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RelativeLayout
        android:id="@+id/fragmentTop"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/fragment_upper"
        android:elevation="4dp"
        android:padding="@dimen/margin_5">

        <TextView
            android:id="@+id/textTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/margin_4"
            android:fontFamily="@font/thin"
            android:text="@string/login"
            android:textColor="@color/accent"
            android:textSize="42sp" />

        <RelativeLayout
            android:id="@+id/rootLoading"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignTop="@+id/rootForm"
            android:layout_alignBottom="@+id/rootForm"
            android:visibility="invisible">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/accessing" />

                <Space
                    android:layout_width="1dp"
                    android:layout_height="@dimen/margin" />

                <ProgressBar
                    style="?android:attr/progressBarStyleHorizontal"
                    android:layout_width="220dp"
                    android:layout_height="wrap_content"
                    android:indeterminateOnly="true"
                    android:indeterminateTint="@color/accent" />
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rootForm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/textTitle">

            <TextView
                android:id="@+id/textName"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin"
                android:layout_marginTop="@dimen/margin_5"
                android:text="@string/app_name"
                android:visibility="invisible" />

            <EditText
                android:id="@+id/editTextUser"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@+id/textName"
                android:layout_marginTop="@dimen/margin"
                android:background="@drawable/edit_text_background"
                android:hint="@string/cpf"
                android:imeOptions="actionNext"
                android:inputType="number"
                android:paddingStart="@dimen/margin_2"
                android:paddingEnd="@dimen/margin_2"
                android:textColor="@android:color/white"
                android:textCursorDrawable="@drawable/cursor" />

            <EditText
                android:id="@+id/editTextPassword"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_below="@+id/editTextUser"
                android:layout_alignParentEnd="true"
                android:layout_marginTop="@dimen/margin_3"
                android:background="@drawable/edit_text_background"
                android:hint="@string/password"
                android:imeOptions="actionGo"
                android:inputType="textPassword"
                android:paddingStart="@dimen/margin_2"
                android:paddingEnd="@dimen/margin_2"
                android:textColor="@android:color/white"
                android:textCursorDrawable="@drawable/cursor" />

            <TextView
                android:id="@+id/textForgottenPassword"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/editTextPassword"
                android:layout_marginStart="@dimen/margin"
                android:layout_marginTop="@dimen/margin"
                android:text="@string/forgotten_password"
                android:textColor="@color/default_text_dark" />

            <Button
                android:id="@+id/buttonLogin"
                android:layout_width="220dp"
                android:layout_height="40dp"
                android:layout_below="@+id/textForgottenPassword"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/margin_4"
                android:background="@drawable/button_state"
                android:enabled="false"
                android:text="@string/login"
                android:textColor="@drawable/text_state" />

            <Button
                android:id="@+id/buttonNewAccount"
                android:layout_width="220dp"
                android:layout_height="40dp"
                android:layout_below="@+id/buttonLogin"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="@dimen/margin_4"
                android:background="@drawable/button_transparent"
                android:text="@string/new_account"
                android:textColor="@drawable/text_state" />
        </RelativeLayout>
    </RelativeLayout>

    <ImageView
        android:id="@+id/ufcaLogo"
        android:layout_width="103dp"
        android:layout_height="32dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="56dp"
        android:src="@drawable/ufca_white" />
</RelativeLayout>